2013-02-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-fstest.c: Remove nested functions.

2013-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/machoXX.c: Remove nested functions.

2013-02-27  Colin Watson  <cjwatson@ubuntu.com>

	Remove nested functions from disk and file read hooks.

	* include/grub/disk.h (grub_disk_read_hook_t): New type.
	(struct grub_disk): Add read_hook_data member.
	* include/grub/file.h (struct grub_file): Likewise.
	* include/grub/fshelp.h (grub_fshelp_read_file): Add read_hook_data
	argument.

	Update all callers.

2012-02-27  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/partmap/msdos.c (grub_partition_msdos_iterate):
	Fix off by one error in enumerating extended partitions.

2013-02-26  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/disk/efi/efidisk.c(grub_efidisk_get_device_name): Fix
	memory leak if device name is not found.

2013-02-25  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/normal/menu_entry.c (update_screen): remove
	unused variable `off' which caused scroll down arrow to be always shown.

2013-02-25  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/normal/menu_entry.c (insert_string): fix off by one
	access to unallocated memory.

2013-02-25  Andrey Borzenkov <arvidjaar@gmail.com>

	* Makefile.util.def: Add partmap/msdos.c to common library.
	* include/grub/msdos_partition.h: Add GRUB_PC_PARTITION_TYPE_LDM
	* grub-core/disk/ldm.c: Check for existence of
	GRUB_PC_PARTITION_TYPE_LDM.

2013-02-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/misc.c (grub_normal_print_device_info): Use KiB to display
	sizes and display sector size.

2013-02-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Implement new command cmosdump.

2013-02-19  Paulo Flabiano Smorigo <pfsmorigo@br.ibm.com>

	Support Openfirmware disks with non-512B sectors.

	* grub-core/disk/ieee1275/ofdisk.c (grub_ofdisk_open): Get the block
	size of the disk.